refactor(ItaipavaTest): Nest all tests